--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -16,14 +16,14 @@ links:
 about: >
 
   <p>Michael received his doctorate in Computer Science from <abbr>UCLA</abbr>
-  in 2010 and joined the <abbr>IMDEA</abbr> Software Institute in 2013,
-  following a postdoc fellowship at the Université Paris Diderot awarded by La
-  Fondation Sciences Mathématiques de Paris (<abbr>FSMP</abbr>). Prior to all that, Michael
-  completed his undergraduate studies at Binghamton University
-  (<abbr>SUNY</abbr>). He has been a teaching assistant for undergraduate
-  courses at <abbr>UCLA</abbr> and Université Paris Diderot, and has held
-  internships at Microsoft Research, <abbr>NASA</abbr> Ames Research Center,
-  and <abbr>IBM</abbr>.</p>
+  in 2010 and joined Bell Labs in 2016, following a postdoc fellowship at the
+  Université Paris Diderot awarded by La Fondation Sciences Mathématiques de
+  Paris (<abbr>FSMP</abbr>), and a faculty researcher position at the
+  <abbr>IMDEA</abbr> Software Institute. Prior to all that, Michael completed
+  his undergraduate studies at Binghamton University (<abbr>SUNY</abbr>). He has
+  been a teaching assistant for undergraduate courses at <abbr>UCLA</abbr> and
+  Université Paris Diderot, and has held internships at Microsoft Research,
+  <abbr>NASA</abbr> Ames Research Center, and <abbr>IBM</abbr>.</p>
 
   <p>Michael’s research enables the construction of reliable software by
   developing the foundations for effective programming abstractions and
