--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -126,7 +126,7 @@ references:
 
 - name: Rupak Majumdar
   title: Scientific Director
-  where: Max Planck Institut for Software Systems
+  where: Max Planck Institute for Software Systems
   web: http://www.mpi-sws.org/~rupak/
   email: rupak@mpi-sws.org
 
