--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -3,7 +3,7 @@ nationality: American
 birth-date: April 11, 1981
 birth-place: Binghamton, <abbr>NY</abbr>, <abbr>USA</abbr>
 role: Researcher
-place: Nokia Bell Labs
+place: <abbr>SRI</abbr> International
 
 links:
 - name: dblp
@@ -36,14 +36,15 @@ about: >
 
 contact:
   address: |
-    Nokia Bell Labs<br>
-    600 Mountain Ave., 2B-439<br>
-    Murray Hill, <abbr>NJ</abbr> 07974<br>
+    <abbr>SRI</abbr> International<br>
+    One Grand Central Place<br>
+    60 E 42nd St<br>
+    New York, <abbr>NY</abbr> 10165<br>
     <abbr>USA</abbr>
   email: michael.emmi@gmail.com
   web: http://michael-emmi.github.io
   phone:
-    - number: +1 (908) 743-4680
+    # - number:
 
 education:
 - degree: Ph.D. Computer Science
@@ -69,9 +70,13 @@ awards:
   when: 2010–2012
 
 positions:
+- title: Sr. Computer Scientist
+  where: <abbr>SRI</abbr> International
+  when: 2017–present
+
 - title: Member of Technical Staff
   where: Nokia Bell Labs, Murray Hill, <abbr>NJ</abbr>
-  when: 2016–present
+  when: 2016–2017
 
 - title: Researcher
   where: <abbr>IMDEA</abbr> Software Institute, Madrid
