--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -283,7 +283,7 @@ publications:
 
 - title: Proving Linearizability Using Forward Simulations
   authors: Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Suha Orhun Mutluergil
-  book: 29th International Conference on Computer-Aided Verification
+  book: Proc. 29th International Conference on Computer-Aided Verification
   acronym: <abbr>CAV</abbr>&nbsp;’17
   series: <abbr>LNCS</abbr>
   volume: 10427
