--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -271,6 +271,16 @@ activities:
   role: Program Committee
 
 publications:
+- title: Monitoring Weak Consistency
+  authors: Michael Emmi and Constantin Enea
+  book: Proc. 30th International Conference on Computer Aided Verification
+  acronym: <abbr>CAV</abbr>&nbsp;’18
+  pages:
+  publisher: <abbr>LNCS</abbr>
+  year: 2018
+  doi:
+  pdf:
+
 - title: Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections
   authors: Michael Emmi and Constantin Enea
   book: Proc. 45th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages
