--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -175,10 +175,25 @@ activities:
   role: Program Committee
   URL:  http://easychair.org/smart-program/LPAR-22/
 
+- acronym: AVoCS&nbsp;’18
+  desc: 18th International Workshop on Automated Verification of Critical Systems
+  role: Invited Talk
+  URL:  http://avocs18.irisa.fr
+
+- acronym: FRIDA&nbsp;’18
+  desc: The 5th Workshop on Formal Reasoning in Distributed Algorithms
+  role: Invited Talk
+  URL:  http://forsyte.at/events/frida2018/
+
 - acronym: <abbr>YR-CONCUR</abbr>&nbsp;’18
   desc: 8th Young Researchers Workshop on Concurrency Theory
   role: Program Committee
   URL: https://www.irif.fr/~cenea/yr-concur2018/
+
+- acronym: VSSE&nbsp;’18
+  desc: Workshop on Verification and Synthesis for Software Evolution
+  role: Invited Talk
+  URL:  http://www.cs.princeton.edu/~grigoryf/vsse_program.html
 
 - acronym: <abbr>SecDev</abbr>&nbsp;’18
   desc: IEEE Cybersecurity Development Conference
@@ -200,6 +215,11 @@ activities:
   role: Program Committee
   URL: http://cs.nyu.edu/acsys/tapas2017/
 
+- acronym: PL&nbsp;Day&nbsp;’17
+  desc: IBM Programming Languages Day
+  role: Contributed Talk
+  URL:  https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=8106
+
 - acronym: <abbr>CAV</abbr>&nbsp;’17
   desc: 29th International Conference on Computer-Aided Verification
   role: Program Committee
@@ -213,6 +233,16 @@ activities:
   desc: 20th International Conference on Foundations of Software Science and Computation Structures
   role: Program Committee
   URL: http://www.etaps.org/index.php/2017/fossacs
+
+- acronym: NJPLS&nbsp;’16
+  desc: NJ Programming Languages and Systems Seminar
+  role: Contributed Talk
+  URL:  http://www.njpls.org/sep16.html
+
+- acronym: FMS&nbsp;’16
+  desc: Workshop on Formal Methods and Security
+  role: Invited Talk
+  URL:  https://conf.researchr.org/track/pldi-2016/FMS-2016-papers
 
 - acronym: <abbr>EC<sup>2</sup></abbr>&nbsp;’16
   desc: 9th International Workshop on Exploiting Concurrency Efficiently and Correctly
@@ -248,6 +278,11 @@ activities:
   desc: 42nd <abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr> Symposium on Principles of Programming Languages
   URL:  http://popl.mpi-sws.org/2015/
   role: External Review Committee
+
+- acronym: CCDP&nbsp;’15
+  desc: 2nd Workshop on The Chemistry of Concurrent and Distributed Programming
+  role: Invited Talk
+  URL: http://netys.net/history/netys2015/workshops/index.html
 
 - acronym: <abbr>FM</abbr>&nbsp;’15
   desc: 20th International Symposium on Formal Methods
