--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -316,6 +316,16 @@ activities:
   role: Program Committee
 
 publications:
+- title: Weak-Consistency Specification via Visibility Relaxation
+  authors: Michael Emmi and Constantin Enea
+  book: Proc. 46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages
+  acronym: <abbr>POPL</abbr>&nbsp;’19
+  pages:
+  publisher: <abbr>ACM</abbr>
+  year: 2019
+  doi:
+  pdf:
+  
 - title: "SideTrail: Verifying Time-Balancing of Cryptosystems"
   authors: Konstantinos Athanasiou, Byron Cook, Michael Emmi, Colm MacCarthaigh, Daniel Schwartz-Narbonne and Serdar Tasiran
   book: "Proc. 10th Working Conference on Verified Software: Theories, Tools, and Experiments"
