--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -325,15 +325,17 @@ publications:
   year: 2019
   doi:
   pdf:
-  
+
 - title: "SideTrail: Verifying Time-Balancing of Cryptosystems"
   authors: Konstantinos Athanasiou, Byron Cook, Michael Emmi, Colm MacCarthaigh, Daniel Schwartz-Narbonne and Serdar Tasiran
   book: "Proc. 10th Working Conference on Verified Software: Theories, Tools, and Experiments"
   acronym: <abbr>VSTTE</abbr>&nbsp;’18
-  pages:
-  publisher: <abbr>LNCS</abbr>
+  series: <abbr>LNCS</abbr>
+  volume: 11294
+  pages: 215–228
+  publisher: Springer
   year: 2018
-  doi:
+  doi: https://doi.org/10.1007/978-3-030-03592-1_12
   pdf:
 
 - title: Monitoring Weak Consistency
@@ -343,7 +345,7 @@ publications:
   series: <abbr>LNCS</abbr>
   volume: 10981
   pages: 487–506
-  publisher: <abbr>Springer</abbr>
+  publisher: Springer
   year: 2018
   doi: https://doi.org/10.1007/978-3-319-96145-3_26
   pdf: papers/conf-cav-EmmiE18.pdf
@@ -353,8 +355,9 @@ publications:
   book: Information and Computation
   acronym: <abbr>I&C</abbr>&nbsp;’18
   volume: 261
+  part: 2
   pages: 383–400
-  publisher: <abbr>Springer</abbr>
+  publisher: Elsevier
   year: 2018
   doi: https://doi.org/10.1016/j.ic.2018.02.014
   pdf: papers/journals-iandc-BouajjaniEEH18.pdf
